feature: override method in create generator