@@ -2,6 +2,7 @@ package server.game.pushing.paper.order_factory;
 
 import server.game.pushing.paper.order_factory.transaction_factory.*;
 import server.game.pushing.paper.store.bank.Bank;
+import server.game.pushing.paper.store.bank.account.AccountType;
 import server.game.pushing.paper.store.chain_of_responsibility.ChainOfResponsibility;
 import server.game.pushing.paper.store.chain_of_responsibility.ChainOfResponsibilityFactory;
 
@@ -16,13 +17,16 @@ public class OrderFactory {
         Bank bank = new Bank();
         ChainOfResponsibility processor = (new ChainOfResponsibilityFactory(bank)).getChainOfResponsibility(false);
 
+        String transaction;
         for (int i = 0; i < size; i++) {
-            List<TransactionFactory> transactionFactories = new ArrayList<>(List.of(new CreateFactory(bank, random)));
-            if (!transactionFactories.get(0).isException()) {
-                transactionFactories.addAll(Arrays.asList(new DepositFactory(bank, random), new WithdrawFactory(bank, random), new TransferFactory(bank, random), new TimeTravelFactory(bank, random)));
+            List<TransactionFactory> transactionFactories = Arrays.asList(new CreateFactory(bank, random), new DepositFactory(bank, random), new WithdrawFactory(bank, random), new TransferFactory(bank, random), new TimeTravelFactory(bank, random));
+
+            if (i < 2) {
+                transaction = ((CreateFactory) transactionFactories.get(0)).getLoadedTransaction(AccountType.CHECKING);
+            } else {
+                transaction = transactionFactories.get(random.nextInt(transactionFactories.size())).getTransaction();
             }
 
-            String transaction = transactionFactories.get(random.nextInt(transactionFactories.size())).getTransaction();
             processor.handle(transaction);
             order.add(transaction);
         }
